# profiler-timeline-api

./: .gitignore  README.md
managed/JetBrains.Timeline.Profiler.Api/Src/: TimelineProfiler.cs
managed/JetBrains.Timeline.Profiler.Api/Src/Impl/: Kernel32Dll.cs  NativeLibrary.cs  TimelineProfilerInterop.cs
native/: CMakeLists.txt
native/api/: exports.cpp
native/include/: debug_output.hpp  etw_provider_api.hpp  events.hpp  utility.hpp
native/tests/: debug_output.hpp  test.cpp
